syntax = "proto3";

package cc.entity.v1;

option csharp_namespace = "Cc.Entity.V1";
option go_package = "entityv1";
option java_multiple_files = true;
option java_outer_classname = "TransactionProto";
option java_package = "com.cc.entity.v1";
option objc_class_prefix = "CEX";
option php_namespace = "Cc\\Entity\\V1";

// Payment transaction.
message Payment {
  string id = 1;
  int64 amount = 2;
  string method = 3;
  string transaction_id = 4;
}

// Transaction.
message Transaction {
  string id = 1;
  string asset_id = 2;
  string status = 3;
  int64 price = 4;
  string user_id = 5;
  repeated string describe_urls = 6;
}
